fix course list v-align

--- a/app/view/components/CourseList/courseList.less
+++ b/app/view/components/CourseList/courseList.less
@@ -1,6 +1,8 @@
 .course-list-wrapper {
     display    : flex;
     flex-wrap  : wrap;
+    align-items: flex-end;
+    align-content: flex-start;
     margin-left: 14.22px;
 
     max-width: 915px;
